# fifa_3DCV_challenge

./: .gitignore  .gitmodules  4dhuman_demo.sh  README.md  main.py  preprocess.py  preprocess.sh  pyproject.toml  sam3d_demo.sh  test.py  video2image.sh  visualize_preprocessed.py
logs/: extract_560573.out  extract_560634.out  extract_560866.err  extract_560866.out
slurms/: slurm_560922_0.err  slurm_560922_0.out  slurm_560922_1.err  slurm_560922_1.out  slurm_560922_2.err  slurm_560922_2.out  slurm_560922_3.err  slurm_560922_3.out
