[project]
name = "fifa-skeletal-tracking-starter-kit-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
